--- a/django-models/LibraryProject/relationship_app/templates/accounts/profile.html
+++ b/django-models/LibraryProject/relationship_app/templates/accounts/profile.html
@@ -1,8 +1,8 @@
 {% if user.is_authenticated %} You are logged in as {{ user }}.
-<form action="{% url 'logout' %}" method="post">
+<form action="{% url 'relationship_app:logout' %}" method="post">
     {% csrf_token %}
     <button type="submit">Log Out</button>
 </form>
 {% else %} You are not logged in.
-<a href="{% url 'login' %}">Click here to log in.</a>
+<a href="{% url 'relationship_app:login' %}">Click here to log in.</a>
 {% endif %}
