--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/add_book.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/add_book.html
@@ -10,11 +10,11 @@
 {% block content %}
 <body>
     <div class="container mt-5">
-        <h2>Ajouter un nouveau livre</h2>
+        <h2>Add a new book in the library</h2>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-success">Ajouter</button>
+            <button type="submit" class="btn btn-success">Add</button>
         </form>
     </div>
 </body>
