--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/edit_book.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/edit_book.html
@@ -11,11 +11,11 @@
 {% block content %}
 <body>
     <div class="container mt-5">
-        <h2>Modifier le livre : {{ book.title }}</h2>
+        <h2>Modify the book: {{ book.title }}</h2>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
 </body>
